[gd_scene load_steps=3 format=3 uid="uid://c2tygrovhgo35"]

[ext_resource type="Theme" uid="uid://db1ri21dipl7v" path="res://assets/main_menu_theme.tres" id="1_gjfgb"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="2_6oanu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gjfgb")
script = ExtResource("2_6oanu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.490196, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Godot RPG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10

[node name="StartGameBtn" type="Button" parent="MarginContainer/VBoxContainer/BtnVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../QuitGameBtn")
focus_neighbor_bottom = NodePath("../QuitGameBtn")
focus_next = NodePath("../QuitGameBtn")
focus_previous = NodePath("../QuitGameBtn")
text = "Start Game"

[node name="QuitGameBtn" type="Button" parent="MarginContainer/VBoxContainer/BtnVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../StartGameBtn")
focus_neighbor_bottom = NodePath("../StartGameBtn")
focus_next = NodePath("../StartGameBtn")
focus_previous = NodePath("../StartGameBtn")
text = "Quit"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BtnVBox/StartGameBtn" to="." method="_on_start_game_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BtnVBox/QuitGameBtn" to="." method="_on_quit_game_btn_pressed"]
